unpackaged/objects/ContactEdit__c.object
<CustomObject>
    <description>Contains Temporary Data Used to Update Contacts via Trigger</description>
    <fields>
        <fullName>Account_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContactEdits</relationshipLabel>
        <relationshipName>ContactEdits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ContactEdits</relationshipLabel>
        <relationshipName>ContactEdits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Name Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorrect_Attempt_Count_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorrect Attempt Count Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorrect_Attempt_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incorrect Attempt Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRegistered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locked_Out_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked Out Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Registered_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Registered Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Name Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PasswordHash__c</fullName>
        <label>PasswordHash</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Password_Hash_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password Hash Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Type Id Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Code_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Code Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Code__c</fullName>
        <label>Reset Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_First_Failed_Attempt_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time of First Failed Attempt Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_First_Failed_Attempt__c</fullName>
        <label>Time of First Failed Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>ContactEdit</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ContactEdit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactEdits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>